--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
         body {
             font-family: 'Inter', sans-serif;
             overflow: hidden;
+            background-image: linear-gradient(rgba(15, 23, 42, 0.85), rgba(15, 23, 42, 0.85)), url('/images/lab.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
         .waec-grid {
             background-image: 
-                linear-gradient(to right, rgba(0, 150, 0, 0.1) 1px, transparent 1px),
-                linear-gradient(to bottom, rgba(0, 150, 0, 0.1) 1px, transparent 1px),
-                linear-gradient(to right, rgba(0, 150, 0, 0.3) 1px, transparent 1px),
-                linear-gradient(to bottom, rgba(0, 150, 0, 0.3) 1px, transparent 1px);
+                linear-gradient(to right, rgba(59, 130, 246, 0.1) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(59, 130, 246, 0.1) 1px, transparent 1px),
+                linear-gradient(to right, rgba(59, 130, 246, 0.2) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(59, 130, 246, 0.2) 1px, transparent 1px);
             background-size: 10px 10px, 10px 10px, 50px 50px, 50px 50px;
         }
     </style>
@@ -32,8 +36,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
